<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:id="@+id/deviceName"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dataCount_label"
            style="@style/EmpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="Sensor Data Count" />

        <TextView
            android:id="@+id/dataCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:id="@+id/resultCount_label"
            style="@style/EmpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="Result Count" />

        <TextView
            android:id="@+id/resultCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:id="@+id/acc_magnitude_label"
            style="@style/EmpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="Magnitude" />

        <TextView
            android:id="@+id/acc_magnitude_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />


        <LinearLayout
            android:id="@+id/dataArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/accel_label"
                style="@style/EmpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/accel" />

            <LinearLayout
                android:id="@+id/accel_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accel_x"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/accel_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="50dp"
                    android:text="@string/emptyText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accel_y"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/accel_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="50dp"
                    android:text="@string/emptyText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accel_z"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/accel_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="50dp"
                    android:text="@string/emptyText" />

            </LinearLayout>

            <TextView
                android:id="@+id/bvp_label"
                style="@style/EmpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/accel_area"
                android:layout_marginTop="10dp"
                android:text="@string/bvp_label" />

            <TextView
                android:id="@+id/bvp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bvp_label"
                android:text="@string/emptyText" />

            <TextView
                android:id="@+id/eda_label"
                style="@style/EmpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bvp"
                android:layout_marginTop="10dp"
                android:text="@string/eda_label" />

            <TextView
                android:id="@+id/eda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eda_label"
                android:text="@string/emptyText" />

            <TextView
                android:id="@+id/ibi_label"
                style="@style/EmpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eda"
                android:layout_marginTop="10dp"
                android:text="@string/ibi_label" />

            <TextView
                android:id="@+id/ibi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ibi_label"
                android:text="@string/emptyText" />

            <TextView
                android:id="@+id/temp_label"
                style="@style/EmpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ibi"
                android:layout_marginTop="10dp"
                android:text="@string/temp_label" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_label"
                android:text="@string/emptyText" />

            <TextView
                android:id="@+id/battery_label"
                style="@style/EmpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temperature"
                android:layout_marginTop="10dp"
                android:text="@string/battery_label" />


            <TextView
                android:id="@+id/battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/battery_label"
                android:text="@string/emptyText" />

            <TextView
                android:id="@+id/file_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/wrist_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wrist_status_label"
                android:text="@string/emptyText" />


            <Button
                android:id="@+id/disconnectButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="STOP STREAMING" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
